# rockfish-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sda-0.1.0-py3-none-any.whl
.claude/: settings.local.json
src/rockfish_mcp/: client.py  manta_client.py  recommender_client.py  sda_client.py  sdk_client.py  sdk_docstring_extractor.py  server.py  validators.py
