[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rockfish-mcp"
version = "0.1.0"
description = "MCP server for Rockfish API"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "rockfish[labs]>=0.44.0"
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.10.0"
]

[project.scripts]
rockfish-mcp = "rockfish_mcp.server:cli"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/yourusername/rockfish-mcp"
Repository = "https://github.com/yourusername/rockfish-mcp"